feat: add fileUrl support for documents
